Closed
Bug 1417824
Opened 8 years ago
Closed 8 years ago
stylo: both "Open with" and "Save File" radio buttons on file save dialog are highlighed on Mac
Categories
(Core :: CSS Parsing and Computation, defect, P2)
Tracking
()
VERIFIED
FIXED
mozilla59
Tracking | Status | |
---|---|---|
firefox-esr52 | --- | unaffected |
firefox57 | --- | unaffected |
firefox58 | --- | unaffected |
firefox59 | --- | verified |
People
(Reporter: cpeterson, Assigned: xidorn)
References
Details
Attachments
(4 files)
STR:
1. Enable stylo-chrome on macOS
2. Open page https://www.iconfinder.com/icons/1760338/biscuit_chips_cookie_food_snack_icon#size=48
3. In the "Opening" file dialog, confirm that the "Save File" radio button is selected and highlighted, as expeced.
4. Click the "Open with" radio button.
RESULT:
Both the "Open with" and "Save File" radio buttons are highlighted, but only one should be. See the attached screenshot: radio-button-screenshot.png.
After selecting the "Open with" radio button, if you click the OK button without choosing the "Open with" application, the dialog will show an "Application not found" warning and its OK button will be truncated. See the attached screenshot: ok-button-screenshot.png. I don't know if this is a duplicate of bug 1417220 or a separate issue.
Reporter | ||
Updated•8 years ago
|
Priority: -- → P2
Reporter | ||
Comment 1•8 years ago
|
||
Assignee | ||
Comment 2•8 years ago
|
||
Looks like it isn't reproducible on Windows...
Reporter | ||
Comment 3•8 years ago
|
||
Assignee | ||
Comment 4•8 years ago
|
||
I can reproduce this on macOS. My guess is that the other radio button is not restyled correctly...
Assignee | ||
Comment 5•8 years ago
|
||
FWIW, it seems to me that when I hover the other radio button, the button is then correctly restyled to non-selected state.
Assignee | ||
Comment 6•8 years ago
|
||
So it might be some invalidation issue.
Assignee | ||
Comment 7•8 years ago
|
||
So the related code is: https://searchfox.org/mozilla-central/rev/33c90c196bc405e628bc868a4f4ba29b992478c0/layout/base/GeckoRestyleManager.cpp#412-424
We may need to port some other code to ServoRestyleManager as well... It isn't currently clear what other stuff would affect.
Comment hidden (mozreview-request) |
Comment 9•8 years ago
|
||
mozreview-review |
Comment on attachment 8931130 [details]
Bug 1417824 part 1 - Query theme for attribute change on element with appearance.
https://reviewboard.mozilla.org/r/202210/#review207958
Is it worth making a reftest for this?
Attachment #8931130 -
Flags: review?(cam) → review+
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Assignee | ||
Updated•8 years ago
|
Assignee: nobody → xidorn+moz
Comment 12•8 years ago
|
||
mozreview-review |
Comment on attachment 8931815 [details]
Bug 1417824 part 2 - Add reftest for this bug.
https://reviewboard.mozilla.org/r/202938/#review208270
Great, thanks!
Attachment #8931815 -
Flags: review?(cam) → review+
Comment 13•8 years ago
|
||
Pushed by xquan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d0c7f8a95402
part 1 - Query theme for attribute change on element with appearance. r=heycam
https://hg.mozilla.org/integration/autoland/rev/890ae45c3d15
part 2 - Add reftest for this bug. r=heycam
Comment 14•8 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/d0c7f8a95402
https://hg.mozilla.org/mozilla-central/rev/890ae45c3d15
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
Reporter | ||
Comment 15•8 years ago
|
||
Verified fixed in Nightly 59.0a1 (2017-11-27).
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•