Bug 1417824 part 1 - Query theme for attribute change on element with appearance. r=heycam

The change is mostly copied from GeckoRestyleManager::AttributeChanged.
It is not clear to me whether it's worth moving it to the superclass so
that we don't duplicate the code. If we are removing the Gecko code in
short term, it probably doesn't matter.

It is also not clear whether we should port other code from that method
to ServoRestyleManager.

MozReview-Commit-ID: Fd1nbwgLGa1